fix: remove extra space in mantine table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,3 +73,6 @@ kendo-pdf-document .reorder-container {
   gap: 0px !important;
 }
 
+.mantine-datatable-empty-state, .mantine-datatable-loader {
+  display: none;
+}
